--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
 html, body {
-    font-family: 'Open Sans', sans-serif;
+    /*font-family: 'Open Sans', sans-serif;*/
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
     background: radial-gradient(closest-side at 45% 45%, #F0F0F0, #ACAEAE);
 }
 
