--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,13 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@font-face {
+	font-family: 'gillsansmt';
+	src: url('../font/gillsansmt.eot');
+	src: local('gillsansmt'), url('../font/gillsansmt.woff') format('woff'), url('../font/gillsansmt.ttf') format('truetype');
+}
 
 html, body {
-    /*font-family: 'Open Sans', sans-serif;*/
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
+    font-family: "gillsansmt", Calibri, sans-serif;
     background: radial-gradient(closest-side at 45% 45%, #F0F0F0, #ACAEAE);
+    line-height: 1;
 }
 
 @media (min-width: 1200px) {
@@ -24,9 +28,8 @@ html, body {
 
 .lead {
     color: #871536;
-    font-weight: bold;
     margin-top: 70px;
-    font-size: 20px;
+    font-size: 22px;
 }
 
 .lead p {
@@ -39,8 +42,8 @@ span + span {
 }
 
 .contacts {
-    font-weight: bold;
     margin-top: 30px;
+    font-size: 17px;
 }
 
 .contacts p {
